--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "gatsby-plugin-sharp": "^2.2.2",
     "gatsby-source-filesystem": "^2.1.2",
     "gatsby-transformer-sharp": "^2.2.1",
+    "konva": "^3.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-konva": "^16.8.7-3"
   },
   "devDependencies": {
     "prettier": "^1.18.2",
